[package]
name = "spektrogramilo"
version = "0.1.0"
edition = "2024"
description = "A WebAssembly-based real-time audio spectrogram"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioWorkletNode",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "Navigator",
    "MediaDevices",
    "Window",
    "AnalyserNode",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlElement",
    "MediaStreamConstraints"
]}
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
rustfft = "6.1"
num-complex = "0.4"
