[package]
name = "spektrogramilo"
version = "0.1.0"
edition = "2024"
description = "WebAssembly-bazita realtempa sona spektrogramilo"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioWorkletNode",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "Navigator",
    "MediaDevices",
    "Window",
    "AnalyserNode",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlElement",
    "MediaStreamConstraints",
    "ImageData"
]}
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
rustfft = "6.1"
num-complex = "0.4"
